# crc32c-hw

./: .gitignore  .travis.yml  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  rustfmt.toml
benches/: crc32c.rs
src/: crc32c_hw.rs  crc32c_hw_consts.rs  crc32c_sw.rs  crc32c_sw_consts.rs  lib.rs
